fixed samples; removed rooVisible option; using jquery-ui-1.8rc3

--- a/src/skin/ui.dynatree.css
+++ b/src/skin/ui.dynatree.css
@@ -29,55 +29,24 @@ ul.ui-dynatree-container li
     background-color: transparent;
     background-position: 0 0;
     background-repeat: repeat-y;
+    background-image: url(vline.gif);
     
     margin:0;
 /*    padding:3px 0 3px 16px;*/
 /*    padding:3px 0 3px 0;*/
     padding:1px 0 0 0;
 }
-ul.ui-dynatree-container li.vline
-{
-    background-image: url(vline.gif);
-}
-/*
-ul.ui-dynatree-container li.ui-dynatree-exp-
-{
-    background-image: url(conn_.gif);
-}
-ul.ui-dynatree-container li.ui-dynatree-exp-l
-{
-    background-image: url(conn_l.gif);
-}
-ul.ui-dynatree-container li.ui-dynatree-exp-e
-{
-    background-image: url(conn_e.gif);
-}
-ul.ui-dynatree-container li.ui-dynatree-exp-el
-{
-    background-image: url(conn_el.gif);
-}
-ul.ui-dynatree-container li.ui-dynatree-exp-c
-{
-    background-image: url(conn_c.gif);
-}
-ul.ui-dynatree-container li.ui-dynatree-exp-cl
-{
-    background-image: url(conn_cl.gif);
-}
-*/
-/*
-.treeview li {
-	-moz-background-clip:border;
-	-moz-background-inline-policy:continuous;
-	-moz-background-origin:padding;
-	background:transparent url(images/treeview-default-line.gif) no-repeat scroll 0 0;
-}
-.treeview li {
-	margin:0;
-	padding:3px 0 3px 16px;
-}
-*/
 
+/* Suppress vertical line, if we don't have connectors */
+ul.ui-dynatree-no-connector >li
+{
+    background-image: none;
+}
+
+ul.ui-dynatree-container li.ui-dynatree-lastsib
+{
+    background-image: none;
+}
 
 /* Style, when control is disabled */
 .ui-dynatree-disabled ul.ui-dynatree-container
@@ -89,8 +58,9 @@ ul.ui-dynatree-container li.ui-dynatree-exp-cl
 
 
 /******************************************************************************* 
- * Vertical line image
+ * Default for custom icons
  */
+/*
 ul.ui-dynatree-container img
 {
 	width: 16px;
@@ -99,6 +69,7 @@ ul.ui-dynatree-container img
 	vertical-align: top;
 	border-style: none;
 }
+*/
 
 /******************************************************************************* 
  * Common icon definitions
@@ -123,6 +94,8 @@ span.ui-dynatree-radio
 /******************************************************************************* 
  * Lines and connectors
  */
+
+/*
 span.ui-dynatree-empty
 {
 }
@@ -132,12 +105,17 @@ span.ui-dynatree-vline
 }
 span.ui-dynatree-connector
 {
-/*	background-image: url("ltL_nes.gif");*/
-    background-image: url("ltL_ne.gif");
+	background-image: url("ltL_nes.gif");
 }
 .ui-dynatree-lastsib span.ui-dynatree-connector
 {
 	background-image: url("ltL_ne.gif");
+}
+*/
+
+span.ui-dynatree-connector
+{
+    background-image: url("ltL_ne.gif");
 }
 
 /******************************************************************************* 
@@ -285,6 +263,15 @@ span.ui-dynatree-icon /* Default icon */
 /******************************************************************************* 
  * Node titles
  */
+
+ /* @Chrome: otherwise hit area of node titles is broken (issue 133) */
+span.ui-dynatree-document,
+span.ui-dynatree-folder
+{
+    display: -moz-inline-box; /* @ FF 1+2 */
+    display: inline-block; /* Required to make a span sizeable */
+}
+
 
 /* Remove blue color and underline from title links */
 ul.ui-dynatree-container a
